fix: cards styles on mobile

--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -1,7 +1,3 @@
-.w-90 {
-  width: 90vw;
-}
-
 .markdown {
   @apply text-lg;
 
